--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "config": "^3.1.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-handlebars": "^5.3.0",
     "express-validator": "^5.3.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.5.1"
   },
   "devDependencies": {
-    "concurrently": "^4.1.0",
+    "concurrently": "^6.0.1",
     "nodemon": "^1.18.11"
   }
 }
