--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "author": "Plxity",
-  "license": "MIT",
+  "author": "AKCAL",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "config": "^3.1.0",
@@ -18,8 +17,14 @@
     "express": "^4.16.4",
     "express-handlebars": "^5.3.0",
     "express-validator": "^5.3.1",
+    "hbs": "^4.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.5.1"
+    "mongoose": "^5.5.1",
+    "morgan": "~1.9.1",
+    "passport": "^0.4.1",
+    "passport-github2": "^0.1.12",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^6.1.0"
   },
   "devDependencies": {
     "concurrently": "^6.0.1",
