--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "Rentomojo",
+  "name": "Interactive App COMP2106",
   "version": "1.0.0",
-  "description": "Rentomojo",
+  "description": "COMP2106",
   "main": "server.js",
   "scripts": {
     "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
-    "dev": "concurrently \"npm run server\" \"npm run client\""
+    "app": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "AKCAL",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "bootstrap": "^3.4.1",
     "config": "^3.1.0",
     "cors": "^2.8.5",
     "express": "^4.16.4",
