--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "COMP2106",
   "main": "server.js",
   "scripts": {
+    "start": "node server",
     "server": "nodemon server",
     "client": "npm start --prefix client",
     "app": "concurrently \"npm run server\" \"npm run client\""
